--- a/curriculo/templates/manage-profile.html
+++ b/curriculo/templates/manage-profile.html
@@ -384,6 +384,7 @@
 			</fieldset>
 		</form>
 		<form method="POST">
+			{% csrf_token %}
 			<fieldset>
 				<div class="input-block">
 					<input type="submit" value="Gerar currículo" name="btn-gerar" id="btn-gerar"></input>
