--- a/curriculo/templates/manage-profile.html
+++ b/curriculo/templates/manage-profile.html
@@ -14,8 +14,7 @@
     <header class="header">
         <h1>Currículo</br><span>Lattes</span></h1>
         <div>
-            <a href="#">Editar perfil</a>
-            <a href="#">Sair</a>
+            <!--<a href="#">Sair</a>-->
         </div>
     </header>
     <section class="container">
@@ -134,14 +133,11 @@
 						</div>
 					</div>
 				</div>
-		</form>
-		<form method="POST">
 			</fieldset>
-            </fieldset>
 		</form>
 		<form method="POST"> 
 			<fieldset>
-                <h2 id="linha-de-pesquisa">Atuação profissional</h2>
+                <h2 id="atuacao_profissional">Atuação profissional</h2>
                 <div class="input-block">
 					{{ atuacao_profissional_form.management_form}}
 					{% for hidden in atuacao_profissional_form.hidden_fields %}
@@ -172,39 +168,6 @@
 		</form>
 		<form method="POST"> 
 			<fieldset>
-                <h2>Atuação profissional</h2>
-                <div class="input-block">
-                    <label for="vinculo">Vínculo</label>
-                    <input type="text" name="vinculo" id="vinculo">
-                </div>
-                <div class="input-block">
-                    <label for="trabalho-dt-ini">Ano de início</label>
-                    <input type="text" name="trabalho-dt-ini" id="trabalho-dt-ini">
-                </div>
-                <div class="input-block">
-                    <label for="trabalho-dt-fin">Ano de término</label>
-                    <input type="text" name="trabalho-dt-fin" id="trabalho-dt-fin">
-                </div>
-                <div class="input-block">
-                    <label for="instituicao">Instituição</label>
-                    <input type="text" name="instituicao" id="instituicao">
-                </div>
-                <div class="input-block">
-                    <label for="enquad">Enquadramento Profissional</label>
-                    <input type="text" name="enquad" id="enquad">
-                </div>
-                <div class="input-block">
-                    <label for="regime">Regime</label>
-                    <input type="text" name="regime" id="regime">
-                </div>
-                <div class="input-block">                    
-                    <input type="button" value="Adicionar atuação profissional" name="addAtProfisional" id="addAtProfisional">
-                </div>
-                
-            </fieldset>
-		</form>
-		<form method="POST"> 
-			<fieldset>
                 <h2 id="linha-de-pesquisa">Linhas de pesquisa</h2>
                 <div class="input-block">
 					{{ linha_pesquisa_form.management_form}}
@@ -228,7 +191,7 @@
 		</form>
 		<form method="POST"> 
 			<fieldset>
-                <h2 id="linha-de-pesquisa">Projetos de pesquisa</h2>
+                <h2 id="projeto_pesquisa">Projetos de Pesquisa</h2>
                 <div class="input-block">
 					{{ projeto_pesquisa_form.management_form}}
 					{% for hidden in projeto_pesquisa_form.hidden_fields %}
@@ -238,7 +201,7 @@
 					<section class="accordion">
 						<input type="checkbox" name="collapse-projeto_pesquisa" id="projeto_pesquisa{{ forloop.counter }}">
 						<h2 class="handle">
-						<label for="projeto_pesquisa{{ forloop.counter }}">Projeto de pesquisa #{{ forloop.counter }}</label>
+						<label for="projeto_pesquisa{{ forloop.counter }}">Projeto de Pesquisa #{{ forloop.counter }}</label>
 						</h2>
 						<div class="content">
 							{{ projeto_pesquisa.errors }}
@@ -249,19 +212,18 @@
                 </div>
 				<div class="wrapper">
 					<div class="input-block">                    
-						<input type="submit" value="Adicionar projeto de pesquisa" name="add_proj_pesq" id="add_proj_pesq">
+						<input type="submit" value="Adicionar Projeto de Pesquisa" name="add_proj_pesq" id="add_proj_pesq">
 					</div>
 					<div class="input-block">                    
-						<input type="submit" value="Salvar projeto de pesquisa" name="save_proje_pesq" id="save_proje_pesq">
+						<input type="submit" value="Salvar Projeto de Pesquisa" name="save_proj_pesq" id="save_proj_pesq">
 					</div>
 				</div>
             </fieldset>
 		</form>                  
-	
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset>
-				<h2 id="proeficiencia_idioma">Idiomas</h2>
+				<h2 id="proeficiencia_idioma">Proficiência em Idiomas</h2>
 				<div class="input-block">
 				{{ proeficiencia_idioma_form.management_form}}
 				{% for hidden in proeficiencia_idioma_form.hidden_fields %}
