Implementação da funcionalidade de logout.

--- a/curriculo/templates/manage-profile.html
+++ b/curriculo/templates/manage-profile.html
@@ -14,7 +14,7 @@
     <header class="header">
         <h1>Currículo</br><span>Lattes</span></h1>
         <div>
-            <!--<a href="#">Sair</a>-->
+			<a href="/logout">Sair</a>
         </div>
     </header>
     <section class="container">
